--- a/boot/grub/grub.cfg
+++ b/boot/grub/grub.cfg
@@ -3,5 +3,5 @@ set timeout=30
 
 menuentry "Conqueror" {
   linux /boot/vmlinuz-4.19.8-amd64 root=/dev/sdb1 ro
-  initrd /boot
+  initrd /boot/initrd.img-4.19.8-amd64 
 }
