--- a/boot/grub/grub.cfg
+++ b/boot/grub/grub.cfg
@@ -1,7 +1,7 @@
 set default=0
 set timeout=30
 
-menuentry "Conqueror" {
+menuentry "conqueror" {
   linux /boot/vmlinuz-4.19.8-amd64 root=/dev/sdb1 ro
   initrd /boot/initrd.img-4.19.8-amd64 
 }
