--- a/src/init/Makefile
+++ b/src/init/Makefile
@@ -1,6 +1,7 @@
 TARGET=init
 CSOURCES = $(shell echo *.c)
 OBJECTS = $(CSOURCES:.c=_c.o)
+LDFLAGS = -lmy -L$(MYOS_PATH)/lib
 
 all: $(TARGET)
 $(TARGET): $(OBJECTS)
