--- a/src/init/Makefile
+++ b/src/init/Makefile
@@ -1,6 +1,9 @@
 TARGET=init
 CSOURCES = $(shell echo *.c)
+SSOURCES = $(shell echo *.s)
+
 OBJECTS = $(CSOURCES:.c=_c.o)
+OBJECTS += $(SSOURCES:.S=_S.o)
 LDFLAGS = -lmy -L$(MYOS_PATH)/lib
 
 all: $(TARGET)
